fix: rutas absolutas y cambio videolena.mp4

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <!-- Tipografías -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
 
-  <!-- Estilos principales -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <!-- Estilos principales (ruta ABSOLUTA al repo) -->
+  <link rel="stylesheet" href="/El-Restaurante/css/styles.css?v=1" />
 
   <!-- Iconos de Font Awesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
@@ -21,7 +21,7 @@
     <div class="nav-container">
       <!-- Logo -->
       <div class="logo">
-        <img src="media/imagenes/logo1.png" alt="Logo El Restaurante">
+        <img src="/El-Restaurante/media/imagenes/logo1.png" alt="Logo El Restaurante">
       </div>
 
       <!-- Nombre del restaurante -->
@@ -29,14 +29,14 @@
 
       <!-- Navegación principal -->
       <nav>
-  <ul class="nav-links">
-    <li><a href="./index.html" aria-current="page">Inicio</a></li>
-    <li><a href="./pages/carta.html">Carta</a></li>
-    <li><a href="./pages/especialidades.html">Especialidades</a></li>
-    <li><a href="./pages/menusgrupo.html">Menú</a></li>
-    <li><a href="./pages/reservas.html">Reservas</a></li>
-  </ul>
-</nav>
+        <ul class="nav-links">
+          <li><a href="/El-Restaurante/index.html" aria-current="page">Inicio</a></li>
+          <li><a href="/El-Restaurante/pages/carta.html">Carta</a></li>
+          <li><a href="/El-Restaurante/pages/especialidades.html">Especialidades</a></li>
+          <li><a href="/El-Restaurante/pages/menusgrupo.html">Menú</a></li>
+          <li><a href="/El-Restaurante/pages/reservas.html">Reservas</a></li>
+        </ul>
+      </nav>
 
       <!-- Menú tipo burger para móviles -->
       <div class="burger" id="burger">☰</div>
@@ -46,7 +46,7 @@
   <!-- VIDEO de bienvenida -->
   <section class="hero">
     <video autoplay muted loop playsinline class="hero-video">
-      <source src="media/videos/cocinero.mp4" type="video/mp4">
+      <source src="/El-Restaurante/media/videos/cocinero.mp4" type="video/mp4">
       Tu navegador no soporta video en HTML5.
     </video>
 
@@ -63,17 +63,15 @@
 
   <!-- Sección con imágenes y frases -->
   <section class="seccion-alternada">
-    <!-- Bloque 1 -->
     <div class="bloque">
-      <img src="media/imagenes/plato4kcomida3.jpg" alt="Plato decorado">
+      <img src="/El-Restaurante/media/imagenes/plato4kcomida3.jpg" alt="Plato decorado">
       <div class="bloque-texto">
         <h3>“Cocinar es un arte que se disfruta con el alma.”</h3>
       </div>
     </div>
 
-    <!-- Bloque 2 -->
     <div class="bloque">
-      <img src="media/imagenes/plato4kcomida2.jpg" alt="Plato gourmet">
+      <img src="/El-Restaurante/media/imagenes/plato4kcomida2.jpg" alt="Plato gourmet">
       <div class="bloque-texto">
         <h3>“Cada plato es una historia contada con ingredientes.”</h3>
       </div>
@@ -92,15 +90,12 @@
 
   <!-- Banner de cookies -->
   <div id="cookie-banner" class="cookie-banner">
-    <p>
-      Este sitio web utiliza cookies para mejorar la experiencia de usuario. 
-      <a href="#">Más información</a>.
-    </p>
+    <p>Este sitio web utiliza cookies para mejorar la experiencia de usuario. <a href="#">Más información</a>.</p>
     <button id="accept-cookies">Aceptar</button>
     <button id="reject-cookies">Rechazar</button>
   </div>
 
-  <!-- JavaScript principal -->
-  <script src="javascript/scripts.js"></script>
+  <!-- JavaScript principal (ruta ABSOLUTA) -->
+  <script src="/El-Restaurante/javascript/scripts.js" defer></script>
 </body>
 </html>
