--- a/pages/carta.html
+++ b/pages/carta.html
@@ -1,5 +1,3 @@
-/pages/carta.html
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -9,7 +7,10 @@
 
   <!-- Fuentes y estilos -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="../css/style.css" />
+
+  <!-- Estilos principales (ruta ABSOLUTA al repo) -->
+  <link rel="stylesheet" href="/El-Restaurante/css/styles.css?v=1" />
+  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -19,7 +20,7 @@
     <div class="nav-container">
       <!-- Logo -->
       <div class="logo">
-        <img src="../media/imagenes/logo1.png" alt="Logo">
+        <img src="/El-Restaurante/media/imagenes/logo1.png" alt="Logo">
       </div>
 
       <!-- Nombre -->
@@ -28,11 +29,11 @@
       <!-- Menú principal -->
       <nav>
         <ul class="nav-links">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./carta.html" aria-current="page">Carta</a></li>
-          <li><a href="./especialidades.html">Especialidades</a></li>
-          <li><a href="./menusgrupo.html">Menú</a></li>
-          <li><a href="./reservas.html">Reservas</a></li>
+          <li><a href="/El-Restaurante/index.html">Inicio</a></li>
+          <li><a href="/El-Restaurante/pages/carta.html" aria-current="page">Carta</a></li>
+          <li><a href="/El-Restaurante/pages/especialidades.html">Especialidades</a></li>
+          <li><a href="/El-Restaurante/pages/menusgrupo.html">Menú</a></li>
+          <li><a href="/El-Restaurante/pages/reservas.html">Reservas</a></li>
         </ul>
       </nav>
 
@@ -54,7 +55,7 @@
         <!-- Lista de platos en el restaurante -->
         <div class="carta-platos">
           <div class="plato">
-            <img src="../media/imagenes/raviolislangosta.jpg" alt="Raviolis de Langosta">
+            <img src="/El-Restaurante/media/imagenes/raviolislangosta.jpg" alt="Raviolis de Langosta">
             <div class="plato-info">
               <h3>Raviolis de Langosta</h3>
               <p>Rellenos de marisco con salsa bisqué cremosa. Una delicadeza del chef.</p>
@@ -62,7 +63,7 @@
           </div>
 
           <div class="plato">
-            <img src="../media/imagenes/salmonteriyaki.jpg" alt="Salmón Teriyaki">
+            <img src="/El-Restaurante/media/imagenes/salmonteriyaki.jpg" alt="Salmón Teriyaki">
             <div class="plato-info">
               <h3>Salmón Teriyaki</h3>
               <p>Filete glaseado con soja dulce, acompañado de arroz jazmín y verduras salteadas.</p>
@@ -70,7 +71,7 @@
           </div>
 
           <div class="plato">
-            <img src="../media/imagenes/entrecotmadurado.jpg" alt="Entrecot Madurado">
+            <img src="/El-Restaurante/media/imagenes/entrecotmadurado.jpg" alt="Entrecot Madurado">
             <div class="plato-info">
               <h3>Entrecot Madurado</h3>
               <p>Carne seleccionada, cocinada al punto, servida con puré trufado y salsa de vino tinto.</p>
@@ -97,7 +98,7 @@
     <!-- Lista de platos para llevar -->
     <div class="carta-platos">
       <div class="plato">
-        <img src="../media/imagenes/paellamixta.jpg" alt="Paella Mixta">
+        <img src="/El-Restaurante/media/imagenes/paellamixta.jpg" alt="Paella Mixta">
         <div class="plato-info">
           <h3>Paella Mixta</h3>
           <p>Tradicional paella con mariscos y carnes, ideal para compartir.</p>
@@ -105,7 +106,7 @@
       </div>
 
       <div class="plato">
-        <img src="../media/imagenes/ensaladagourmet.jpg" alt="Ensalada Gourmet">
+        <img src="/El-Restaurante/media/imagenes/ensaladagourmet.jpg" alt="Ensalada Gourmet">
         <div class="plato-info">
           <h3>Ensalada Gourmet</h3>
           <p>Mezclum de hojas verdes con queso de cabra, nueces y vinagreta de frutos rojos.</p>
@@ -113,7 +114,7 @@
       </div>
 
       <div class="plato">
-        <img src="../media/imagenes/hamburguesapremium.jpg" alt="Hamburguesa Premium">
+        <img src="/El-Restaurante/media/imagenes/hamburguesapremium.jpg" alt="Hamburguesa Premium">
         <div class="plato-info">
           <h3>Hamburguesa Premium</h3>
           <p>Pan artesanal, carne 100% vacuno, cebolla caramelizada y queso madurado.</p>
@@ -140,6 +141,6 @@
   </div>
 
   <!-- Script -->
-  <script src="../javascript/scripts.js"></script>
+  <script src="/El-Restaurante/javascript/scripts.js" defer></script>
 </body>
 </html>
