--- a/pages/especialidades.html
+++ b/pages/especialidades.html
@@ -1,5 +1,3 @@
-/pages/especialidades.html
-```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -10,13 +8,11 @@
   <!-- Fuentes -->
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
   
-  <!-- Estilos -->
-  <link rel="stylesheet" href="../css/style.css" />
+  <!-- Estilos (ABSOLUTO) -->
+  <link rel="stylesheet" href="/El-Restaurante/css/styles.css?v=1" />
   
   <!-- Iconos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  
-  <!-- Librería AOS para animaciones (si se usa en CSS/JS) -->
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -25,16 +21,16 @@
   <header class="navbar">
     <div class="nav-container">
       <div class="logo">
-        <img src="../media/imagenes/logo1.png" alt="Logo">
+        <img src="/El-Restaurante/media/imagenes/logo1.png" alt="Logo">
       </div>
       <h1 class="nombrelogo">El Restaurante</h1>
       <nav>
         <ul class="nav-links">
-          <li><a href="../index.html">Inicio</a></li>
-          <li><a href="./carta.html">Carta</a></li>
-          <li><a href="./especialidades.html" aria-current="page">Especialidades</a></li>
-          <li><a href="./menusgrupo.html">Menú</a></li>
-          <li><a href="./reservas.html">Reservas</a></li>
+          <li><a href="/El-Restaurante/index.html">Inicio</a></li>
+          <li><a href="/El-Restaurante/pages/carta.html">Carta</a></li>
+          <li><a href="/El-Restaurante/pages/especialidades.html" aria-current="page">Especialidades</a></li>
+          <li><a href="/El-Restaurante/pages/menusgrupo.html">Menú</a></li>
+          <li><a href="/El-Restaurante/pages/reservas.html">Reservas</a></li>
         </ul>
       </nav>
       <div class="burger" id="burger">☰</div>
@@ -44,53 +40,49 @@
   <!-- Especialidades -->
   <section class="menu" id="especialidades">
     <h2>Especialidades</h2>
-    <!-- Lista horizontal con scroll -->
     <div class="menu-items horizontal-scroll">
-
-      <!-- Cada .menu-item es un plato -->
       <div class="menu-item">
-        <img src="../media/imagenes/tortitas.jpg" alt="Tortitas caseras">
+        <img src="/El-Restaurante/media/imagenes/tortitas.jpg" alt="Tortitas caseras">
         <p><strong>Tortitas caseras</strong> con miel y frutos rojos.</p>
       </div>
 
       <div class="menu-item">
-        <!-- OJO: nombre de archivo con espacios -->
-        <img src="../media/imagenes/solomillo%20al%20foie%202.jpg" alt="Solomillo al foie">
+        <img src="/El-Restaurante/media/imagenes/solomillo%20al%20foie%202.jpg" alt="Solomillo al foie">
         <p><strong>Solomillo de ternera</strong> al foie.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/tarta-de-queso-y-bayas-sobre-la-mesa.jpg" alt="Tarta de queso">
+        <img src="/El-Restaurante/media/imagenes/tarta-de-queso-y-bayas-sobre-la-mesa.jpg" alt="Tarta de queso">
         <p><strong>Tarta de queso al horno</strong> con mermelada casera.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/plato4kcomida3.jpg" alt="Tiras de ternera con salsa a la naranja">
+        <img src="/El-Restaurante/media/imagenes/plato4kcomida3.jpg" alt="Tiras de ternera con salsa a la naranja">
         <p><strong>Tiras de Ternera</strong> con salsa a la naranja.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/hamburguesapremium.jpg" alt="Hamburguesa Premium">
+        <img src="/El-Restaurante/media/imagenes/hamburguesapremium.jpg" alt="Hamburguesa Premium">
         <p><strong>Hamburguesa Premium</strong> con cebolla caramelizada.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/salmonteriyaki.jpg" alt="Salmón Teriyaki">
+        <img src="/El-Restaurante/media/imagenes/salmonteriyaki.jpg" alt="Salmón Teriyaki">
         <p><strong>Salmón</strong> Teriyaki.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/raviolislangosta.jpg" alt="Raviolis de Langosta">
+        <img src="/El-Restaurante/media/imagenes/raviolislangosta.jpg" alt="Raviolis de Langosta">
         <p><strong>Raviolis</strong> de Langosta.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/entrecotmadurado.jpg" alt="Entrecot madurado a la leña">
+        <img src="/El-Restaurante/media/imagenes/entrecotmadurado.jpg" alt="Entrecot madurado a la leña">
         <p><strong>Entrecot madurado</strong> hecho con leña.</p>
       </div>
 
       <div class="menu-item">
-        <img src="../media/imagenes/paellamixta.jpg" alt="Paella Mixta">
+        <img src="/El-Restaurante/media/imagenes/paellamixta.jpg" alt="Paella Mixta">
         <p><strong>Paella</strong> Mixta.</p>
       </div>
     </div>
@@ -100,7 +92,8 @@
   <section class="video-especialidades">
     <div class="video-wrapper">
       <video autoplay muted loop playsinline>
-        <source src="../media/videos/videoleña.mp4" type="video/mp4" />
+        <!-- Renombra el archivo a videolena.mp4 en /media/videos si aún tiene ñ -->
+        <source src="/El-Restaurante/media/videos/videolena.mp4" type="video/mp4" />
         Tu navegador no soporta el video.
       </video>
       <div class="video-texto">
@@ -128,7 +121,7 @@
   </div>
 
   <!-- Scripts -->
-  <script src="../javascript/scripts.js"></script>
+  <script src="/El-Restaurante/javascript/scripts.js" defer></script>
 
 </body>
 </html>
